--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn">Add</button>
+<button class="btn" [ngStyle]="{'background-color': color}" (click)="onClick()">{{ text }}</button>
